# vertex-homeserver

./: .gitignore  Cargo.toml  config.yaml  deny.toml  rustfmt.toml
.cargo/: config.toml
crates/vertex-auth/: Cargo.toml
crates/vertex-auth/src/: config.rs  data.rs  error.rs  lib.rs  service.rs
crates/vertex-auth/src/routes/: mod.rs  well_known.rs
crates/vertex-auth/src/routes/vertex/: authorize.rs  jwks.rs  mod.rs
crates/vertex-common/: Cargo.toml
crates/vertex-common/src/: auth.rs  error.rs  lib.rs  ruma.rs
crates/vertex-common/src/cache/: config.rs  memory.rs  mod.rs  redis.rs
crates/vertex-unified-homeserver/: Cargo.toml
crates/vertex-unified-homeserver/src/: main.rs
src/: main.rs  openid.rs  ruma.rs
src/config/: cache.rs  mod.rs  oauth2_upstream.rs
src/routes/: mod.rs  well_known.rs
src/routes/matrix/: auth_metadata.rs  mod.rs  versions.rs  whoami.rs
src/routes/vertex/: authorize.rs  jwks.rs  mod.rs  redirect.rs  register.rs  token.rs
test-setup/: docker-compose.yml
