[package]
name = "vertex-homeserver"
version = "0.0.1"

authors = ["Cedric Hammes <contact@cach30verfl0w.net>"]
license = "MPL-2"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
openidconnect = { version = "4.0.1", features = ["reqwest"] }
serde_with = { version = "3.17.0", features = ["time_0_3"] }
redis = { version = "1.0.5", features = ["tokio-comp"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing-subscriber = "0.3.22"
humantime-serde = "1.1.1"
serde_json = "1.0.149"
reqwest = "0.12.0"

tower-http = { version = "0.6.8", features = ["cors", "tracing"] }
ruma = { version = "0.14.1", features = ["client-api-s"] }
axum = { version = "0.8.8", features = ["json", "macros"] }
aws-lc-rs = "1.16.1"
pem = "3.0.6"
anyhow = "1.0.102"
schemars = "1.2.1"
url = "2.5.8"