[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
authors = ["Cedric Hammes <contact@cach30verfl0w.net>"]
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]
vertex-common = { path = "crates/vertex-common" }
vertex-auth = { path = "crates/vertex-auth" }

figment = { version = "0.10.19", features = ["yaml", "env"] }
openidconnect = { version = "4.0.1", features = ["reqwest"] }
duration-str = { version = "0.21.0", features = ["serde"] }
redis = { version = "1.0.5", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
moka = { version = "0.12.14", features = ["future"] }
tracing-subscriber = "0.3.23"
async-trait = "0.1.89"
serde_json = "1.0.149"
thiserror = "2.0.18"
reqwest = "0.13.2"
schemars = "1.2.1"
tracing = "0.1.44"
chrono = "0.4.44"
tokio = "1.50.0"
ruma = "0.14.1"
size = "0.5.0"
axum = "0.8.8"
url = "2.5.8"
