[package]
name = "vertex-auth"
description = "Crate implementing Authentication-related services and endpoints for the Vertex homeserver"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
schemars = ["dep:schemars", "vertex-common/schemars"]

[dependencies]
openidconnect = { version = "4.0.1", features = ["reqwest"] }
schemars = { workspace = true, optional = true }
vertex-common.workspace = true
duration-str.workspace = true
thiserror.workspace = true
aws-lc-rs.workspace = true
reqwest.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
axum.workspace = true
ruma.workspace = true
url.workspace = true
pem.workspace = true